# butz

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.dev.yml  docker-compose.yml
butz-api/: Cargo.toml
butz-api/src/: cors.rs  db.rs  main.rs  utils.rs
butz-api/src/models/: from_error.rs  mod.rs  users.rs
butz-api/src/routes/: lidl-postman.http  mod.rs  users.http  users.rs
butz-macros/: Cargo.toml
butz-macros/src/: lib.rs
butz-shared/: Cargo.toml
butz-shared/src/: lib.rs
butz-shared/src/models/: mod.rs  users.rs
