[package]
name = "butz-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
rocket = { version = "0.5.0-rc.3"}
surrealdb = {version = "1.0.0-beta.9"}